self test and improve